# hazakura-wallpaper

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  PRIVACY.md  PROJECT_NOTES.md  Package.swift  README.md  SECURITY.md  package-lock.json  package.json
Resources/: Info.plist  icon.icns
SakuraSky.xcodeproj/: project.pbxproj
docs/: INSTALL.md  RELEASE_QA.md
script/: build_and_run.sh
scripts/: build_app.sh  check_app_lifecycle_safety.sh  check_distribution_readiness.sh  check_github_release_notes.sh  check_legacy_tauri_boundary.sh  check_preview_artifacts.sh  check_preview_determinism.sh  check_privacy_security_boundaries.sh  check_public_artifact_hygiene.sh  check_public_git_history_hygiene.sh  check_public_repository_docs.sh  check_public_source_hygiene.sh  check_publish_readiness.sh  check_release_evidence.sh  check_release_metadata.sh  check_renderer_memory_smoke.sh  check_renderer_tuning_loop.sh  check_script_executable_bits.sh  check_share_evidence_ready.sh  check_share_readiness.sh  check_swift_asset_boundaries.sh  check_swift_safety.sh  check_text_normalization.sh  check_unsigned_share_prerequisites.sh  check_workflow_aliases.sh  check_zip_contents.sh  finalize_unsigned_share.sh  notarize_release_zip.sh  package_dmg.sh  package_zip.sh  prepare_release_candidate.sh  record_bundle_open_verification.sh  record_unsigned_bundle_open_verification.sh  record_unsigned_memory_check.sh  record_visual_qa_acceptance.sh  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+37 files in other folders)
