[package]
name = "sakura-sky"
version = "1.0.0"
description = "Sakura falling desktop screensaver"
edition = "2021"
rust-version = "1.77"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
